--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "datatables.net": "^1.10.19",
     "datatables.net-dt": "^1.10.19",
     "jquery": "^3.3.1",
+    "ngx-spinner": "^6.0.0",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
