--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "datatables.net": "^1.10.19",
     "datatables.net-dt": "^1.10.19",
     "jquery": "^3.3.1",
+    "jszip": "^3.1.5",
     "moment": "^2.22.2",
     "ng-modal": "^1.0.2",
     "ng-multiselect-dropdown": "^0.2.1",
